deploy: 0c7621dbc4f5b1a67d244727e83bcc4d05ea09e2

--- a/demo/camera.html
+++ b/demo/camera.html
@@ -85,7 +85,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">3. </span>Camera with Kivy</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/demo/camera.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/demo/camera.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
