--- a/resources.html
+++ b/resources.html
@@ -84,7 +84,7 @@
       <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active">Resources</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="_sources/resources.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/resources.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
