--- a/tutorials/creating-my-layer.html
+++ b/tutorials/creating-my-layer.html
@@ -91,7 +91,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">5. </span>Creating Your Own Layer with Yocto</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/tutorials/creating-my-layer.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/tutorials/creating-my-layer.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
