--- a/tutorials/first-steps-kivy.html
+++ b/tutorials/first-steps-kivy.html
@@ -87,7 +87,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">2. </span>First steps with Kivy</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/tutorials/first-steps-kivy.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/tutorials/first-steps-kivy.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
