--- a/tutorials/installing-kivy-layer.html
+++ b/tutorials/installing-kivy-layer.html
@@ -86,7 +86,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">4. </span>Installing the Kivy layer in Yocto</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/tutorials/installing-kivy-layer.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/tutorials/installing-kivy-layer.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
