--- a/tutorials/yocto-pip.html
+++ b/tutorials/yocto-pip.html
@@ -85,7 +85,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">6. </span>Install a Package in Yocto with Pip</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/tutorials/yocto-pip.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/tutorials/yocto-pip.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
