--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
       <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active">Contact</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="_sources/contact.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/contact.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
