--- a/demo/media.html
+++ b/demo/media.html
@@ -86,7 +86,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">2. </span>Media with Kivy</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/demo/media.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/demo/media.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
