--- a/faq.html
+++ b/faq.html
@@ -89,7 +89,7 @@
       <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active">Frequently Asked Questions</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="_sources/faq.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/faq.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
