--- a/tutorials/first-steps-yocto.html
+++ b/tutorials/first-steps-yocto.html
@@ -85,7 +85,7 @@
       <li><a href="../index.html" class="icon icon-home" aria-label="Home"></a></li>
       <li class="breadcrumb-item active"><span class="section-number">3. </span>First steps with Yocto</li>
       <li class="wy-breadcrumbs-aside">
-            <a href="../_sources/tutorials/first-steps-yocto.rst.txt" rel="nofollow"> View page source</a>
+              <a href="https://github.com/phytec/kivy-demo/blob/main/doc/tutorials/first-steps-yocto.rst" class="fa fa-github"> Edit on GitHub</a>
       </li>
   </ul>
   <hr/>
